--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
     <meta charset="UTF-8">
-    <title>TESTE ALURAr</title>
+    <title>Uniaço Monstagens Industriais</title>
 </head>
 <body>
-    <h1>TESTE</h1>
-    <p>Lorem        testete</p>
+    <h1>Uniaço</h1>
+    <p>Montagens Industriais</p>
     
        
 </body>
